Clean up project files and reorganize test structure
Cleanup Actions:
- Removed .conda directory containing empty files
- Removed all __pycache__ directories
- Moved test files from root to tests/ directory:
  * test_validation.py  tests/test_system_validation.py
  * test_polish_persistence.py  tests/test_polish_persistence.py
- Removed redundant test files:
  * tests/test_user_edit.py (duplicate)
  * tests/test_user_edit_success.py (duplicate)
  * Kept tests/test_user_edit_final.py (most comprehensive)
- Updated .gitignore with additional cleanup patterns:
  * *.tmp, *.bak, *.swp, *.swo, *~
  * .DS_Store, Thumbs.db, .conda/, .vscode/settings.json

Project Status:
 77 Python files across all directories
 All test files (39) validated for syntax
 Clean file structure with no duplicates
 Proper gitignore patterns for future cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,14 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Additional cleanup patterns
+*.tmp
+*.bak
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+.conda/
+.vscode/settings.json
